# Calculator

./: CMakeLists.txt  calc.cpp  numpad.h
src/: calc.h  main.cpp  numpad.cpp  screen.cpp  screen.h
